k8s/express-computing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: computing-service
  labels:
    app: computing
spec:
  selector:
    app: computing
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computing
  labels:
    app: computing
spec:
  selector:
    matchLabels:
      app: computing
  template:
    metadata:
      labels:
        app: computing
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
        - name: computing
          image: docker.io/library/computing-service:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
