k8s/redis-client.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-client-svc
spec:
  selector:
    app: redis-client-svc
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-client
spec:
  selector:
    matchLabels:
      app: redis-client
  template:
    metadata:
      labels:
        app: redis-client
    spec:
      containers:
        - name: redis-client
          image: docker.io/library/redis-client:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
