k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
    - host: countword.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: computing-service
                port:
                  number: 3000
